<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rodrigoescobar.mybooks.Home">

    <TextView
        android:id="@+id/mMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/main_Menu_Title"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <Button
        android:id="@+id/main_Menu_Add_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_Menu_List_Button"
        android:layout_alignStart="@+id/main_Menu_List_Button"
        android:layout_below="@+id/mMTitle"
        android:layout_marginTop="44dp"
        android:text="@string/add_a_book" />

    <Button
        android:id="@+id/main_Menu_List_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_Menu_Search_Button"
        android:layout_alignStart="@+id/main_Menu_View_Button"
        android:layout_below="@+id/main_Menu_Add_Button"
        android:text="@string/list_books" />

    <Button
        android:id="@+id/main_Menu_View_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_Menu_Search_Button"
        android:layout_alignStart="@+id/main_Menu_Edit_Button"
        android:layout_below="@+id/main_Menu_List_Button"
        android:text="@string/view_a_book" />

    <Button
        android:id="@+id/main_Menu_Edit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_Menu_Search_Button"
        android:layout_alignStart="@+id/main_Menu_Delete_Button"
        android:layout_below="@+id/main_Menu_View_Button"
        android:text="@string/edit_a_book" />

    <Button
        android:id="@+id/main_Menu_Delete_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_Menu_Search_Button"
        android:layout_alignStart="@+id/main_Menu_Search_Button"
        android:layout_below="@+id/main_Menu_Edit_Button"
        android:text="@string/delete_a_book" />

    <Button
        android:id="@+id/main_Menu_Search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_Menu_Delete_Button"
        android:layout_centerHorizontal="true"
        android:text="@string/search_for_a_book" />

    <TextView
        android:id="@+id/signatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/signature"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0c72f7" />
</RelativeLayout>
